source/ocwWrp_nativeClasses_signatures.h


Vec4f*   pCvVectorVec4fGet(vector_Vec4f* wrapper, int index);

Vec4f*   pCvVectorVec4fSet(vector_Vec4f* wrapper, int index, Vec4f* value);

vector_Vec6f*   pCvVectorVec6fCreate(int n);

void   pCvVectorVec6fDelete(vector_Vec6f* wrapper);

int   pCvVectorVec6fLength(vector_Vec6f* wrapper);

Vec6f*   pCvVectorVec6fGet(vector_Vec6f* wrapper, int index);

Vec6f*   pCvVectorVec6fSet(vector_Vec6f* wrapper, int index, Vec6f* value);

vector_vector_Point*   pCvVectorvector_PointCreate(int n);

void   pCvVectorvector_PointDelete(vector_vector_Point* wrapper);

int   pCvVectorvector_PointLength(vector_vector_Point* wrapper);

vector_Point*   pCvVectorvector_PointGet(vector_vector_Point* wrapper, int index);

vector_Point*   pCvVectorvector_PointSet(vector_vector_Point* wrapper, int index, vector_Point* value);

vector_vector_DMatch*   pCvVectorvector_DMatchCreate(int n);

void   pCvVectorvector_DMatchDelete(vector_vector_DMatch* wrapper);

int   pCvVectorvector_DMatchLength(vector_vector_DMatch* wrapper);

vector_DMatch*   pCvVectorvector_DMatchGet(vector_vector_DMatch* wrapper, int index);

vector_DMatch*   pCvVectorvector_DMatchSet(vector_vector_DMatch* wrapper, int index, vector_DMatch* value);

vector_vector_Point2f*   pCvVectorvector_Point2fCreate(int n);

void   pCvVectorvector_Point2fDelete(vector_vector_Point2f* wrapper);

int   pCvVectorvector_Point2fLength(vector_vector_Point2f* wrapper);

vector_Point2f*   pCvVectorvector_Point2fGet(vector_vector_Point2f* wrapper, int index);

vector_Point2f*   pCvVectorvector_Point2fSet(vector_vector_Point2f* wrapper, int index, vector_Point2f* value);

Algorithm_t*   pCvPtr_AlgorithmConvert(Ptr_Algorithm* wrapper);

void    pCvPtr_AlgorithmDelete( Ptr_Algorithm* ptr, Algorithm_t* wrapper = 0);

Feature2D_t*   pCvPtr_Feature2DConvert(Ptr_Feature2D* wrapper);

void    pCvPtr_Feature2DDelete( Ptr_Feature2D* ptr, Feature2D_t* wrapper = 0);

FaceRecognizer_t*   pCvPtr_FaceRecognizerConvert(Ptr_FaceRecognizer* wrapper);

void    pCvPtr_FaceRecognizerDelete( Ptr_FaceRecognizer* ptr, FaceRecognizer_t* wrapper = 0);

CLAHE_t*   pCvPtr_CLAHEConvert(Ptr_CLAHE* wrapper);

void    pCvPtr_CLAHEDelete( Ptr_CLAHE* ptr, CLAHE_t* wrapper = 0);

FeatureDetector_t*   pCvPtr_FeatureDetectorConvert(Ptr_FeatureDetector* wrapper);

void    pCvPtr_FeatureDetectorDelete( Ptr_FeatureDetector* ptr, FeatureDetector_t* wrapper = 0);

DescriptorExtractor_t*   pCvPtr_DescriptorExtractorConvert(Ptr_DescriptorExtractor* wrapper);

void    pCvPtr_DescriptorExtractorDelete( Ptr_DescriptorExtractor* ptr, DescriptorExtractor_t* wrapper = 0);

DescriptorMatcher_t*   pCvPtr_DescriptorMatcherConvert(Ptr_DescriptorMatcher* wrapper);

void    pCvPtr_DescriptorMatcherDelete( Ptr_DescriptorMatcher* ptr, DescriptorMatcher_t* wrapper = 0);

IndexParams_t*   pCvPtr_flann_IndexParamsConvert(Ptr_flann_IndexParams* wrapper);

void    pCvPtr_flann_IndexParamsDelete( Ptr_flann_IndexParams* ptr, IndexParams_t* wrapper = 0);

SearchParams_t*   pCvPtr_flann_SearchParamsConvert(Ptr_flann_SearchParams* wrapper);

void    pCvPtr_flann_SearchParamsDelete( Ptr_flann_SearchParams* ptr, SearchParams_t* wrapper = 0);