Delphi/unOcvWrapper_nativeClasses.pas

Function    pCvVectorVec4fGet(const wrapper: PCvvector_Vec4f; const index: Integer): PCvVec4f_t; cdecl;
Function    pCvVectorVec4fSet(const wrapper: PCvvector_Vec4f; const index: Integer; const val: PCvVec4f_t): PCvVec4f_t; cdecl;
Function    pCvVectorVec6fCreate(const n: Integer): PCvvector_Vec6f; cdecl;
Procedure   pCvVectorVec6fDelete(const wrapper: PCvvector_Vec6f); cdecl;
Function    pCvVectorVec6fLength(const wrapper: PCvvector_Vec6f): Integer; cdecl;
Function    pCvVectorVec6fGet(const wrapper: PCvvector_Vec6f; const index: Integer): PCvVec6f_t; cdecl;
Function    pCvVectorVec6fSet(const wrapper: PCvvector_Vec6f; const index: Integer; const val: PCvVec6f_t): PCvVec6f_t; cdecl;
Function    pCvVectorvector_PointCreate(const n: Integer): PCvvector_vector_Point; cdecl;
Procedure   pCvVectorvector_PointDelete(const wrapper: PCvvector_vector_Point); cdecl;
Function    pCvVectorvector_PointLength(const wrapper: PCvvector_vector_Point): Integer; cdecl;
Function    pCvVectorvector_PointGet(const wrapper: PCvvector_vector_Point; const index: Integer): PCvvector_vector_Point; cdecl;
Function    pCvVectorvector_PointSet(const wrapper: PCvvector_vector_Point; const index: Integer; const val: PCvvector_vector_Point): PCvvector_vector_Point; cdecl;
Function    pCvVectorvector_DMatchCreate(const n: Integer): PCvvector_vector_DMatch; cdecl;
Procedure   pCvVectorvector_DMatchDelete(const wrapper: PCvvector_vector_DMatch); cdecl;
Function    pCvVectorvector_DMatchLength(const wrapper: PCvvector_vector_DMatch): Integer; cdecl;
Function    pCvVectorvector_DMatchGet(const wrapper: PCvvector_vector_DMatch; const index: Integer): PCvvector_vector_DMatch; cdecl;
Function    pCvVectorvector_DMatchSet(const wrapper: PCvvector_vector_DMatch; const index: Integer; const val: PCvvector_vector_DMatch): PCvvector_vector_DMatch; cdecl;
Function    pCvVectorvector_Point2fCreate(const n: Integer): PCvvector_vector_Point2f; cdecl;
Procedure   pCvVectorvector_Point2fDelete(const wrapper: PCvvector_vector_Point2f); cdecl;
Function    pCvVectorvector_Point2fLength(const wrapper: PCvvector_vector_Point2f): Integer; cdecl;
Function    pCvVectorvector_Point2fGet(const wrapper: PCvvector_vector_Point2f; const index: Integer): PCvvector_vector_Point2f; cdecl;
Function    pCvVectorvector_Point2fSet(const wrapper: PCvvector_vector_Point2f; const index: Integer; const val: PCvvector_vector_Point2f): PCvvector_vector_Point2f; cdecl;
Function    pCvPtr_AlgorithmConvert(const wrapper: PCvPtr_Algorithm): PCvAlgorithm_t; cdecl;
Procedure   pCvPtr_AlgorithmDelete(const cptr: PCvPtr_Algorithm;  const wrapper: PCvAlgorithm_t); cdecl;
Function    pCvPtr_Feature2DConvert(const wrapper: PCvPtr_Feature2D): PCvFeature2D_t; cdecl;
Procedure   pCvPtr_Feature2DDelete(const cptr: PCvPtr_Feature2D;  const wrapper: PCvFeature2D_t); cdecl;
Function    pCvPtr_FaceRecognizerConvert(const wrapper: PCvPtr_FaceRecognizer): PCvFaceRecognizer_t; cdecl;
Procedure   pCvPtr_FaceRecognizerDelete(const cptr: PCvPtr_FaceRecognizer;  const wrapper: PCvFaceRecognizer_t); cdecl;
Function    pCvPtr_CLAHEConvert(const wrapper: PCvPtr_CLAHE): PCvCLAHE_t; cdecl;
Procedure   pCvPtr_CLAHEDelete(const cptr: PCvPtr_CLAHE;  const wrapper: PCvCLAHE_t); cdecl;
Function    pCvPtr_FeatureDetectorConvert(const wrapper: PCvPtr_FeatureDetector): PCvFeatureDetector_t; cdecl;
Procedure   pCvPtr_FeatureDetectorDelete(const cptr: PCvPtr_FeatureDetector;  const wrapper: PCvFeatureDetector_t); cdecl;
Function    pCvPtr_DescriptorExtractorConvert(const wrapper: PCvPtr_DescriptorExtractor): PCvDescriptorExtractor_t; cdecl;
Procedure   pCvPtr_DescriptorExtractorDelete(const cptr: PCvPtr_DescriptorExtractor;  const wrapper: PCvDescriptorExtractor_t); cdecl;
Function    pCvPtr_DescriptorMatcherConvert(const wrapper: PCvPtr_DescriptorMatcher): PCvDescriptorMatcher_t; cdecl;
Procedure   pCvPtr_DescriptorMatcherDelete(const cptr: PCvPtr_DescriptorMatcher;  const wrapper: PCvDescriptorMatcher_t); cdecl;
Function    pCvPtr_flann_IndexParamsConvert(const wrapper: PCvPtr_flann_IndexParams): PCvIndexParams_t; cdecl;
Procedure   pCvPtr_flann_IndexParamsDelete(const cptr: PCvPtr_flann_IndexParams;  const wrapper: PCvIndexParams_t); cdecl;
Function    pCvPtr_flann_SearchParamsConvert(const wrapper: PCvPtr_flann_SearchParams): PCvSearchParams_t; cdecl;
Procedure   pCvPtr_flann_SearchParamsDelete(const cptr: PCvPtr_flann_SearchParams;  const wrapper: PCvSearchParams_t); cdecl;
